apps/keycloak/target/classes/META-INF/fabric8/openshift/sso-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/target-platform: openshift
    service.alpha.openshift.io/dependencies: '[{"name":"keycloak-db","namespace":"","kind":"Service"}]'
    fabric8.io/git-commit: 40eae4ef1109d880c1e5b885a5bfddd6c784cbea
    fabric8.io/git-branch: master
    fabric8.io/scm-con-url: scm:git:git@github.com:wolsnut4/easydebt-platform.git/apps/keycloak
    fabric8.io/scm-devcon-url: scm:git:git@github.com:wolsnut4/easydebt-platform.git/apps/keycloak
    fabric8.io/scm-tag: app-console-2.0.1
    fabric8.io/scm-url: http://github.com/wolsnut4/easydebt-platform/apps/keycloak
  labels:
    expose: "true"
    app: keycloak
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: io.clarksnut.platform.apps
  name: sso
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: keycloak
    provider: fabric8
    group: io.clarksnut.platform.apps
