apps/keycloak/target/classes/META-INF/fabric8/openshift/keycloak-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: keycloak
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: io.clarksnut.platform.apps
  name: keycloak
spec:
  to:
    kind: Service
    name: keycloak
